--- a/DevelopIt/src/components/services/Services.css
+++ b/DevelopIt/src/components/services/Services.css
@@ -47,3 +47,47 @@ margin-top: 0.4em;
      font-size: 1.2em;
      color: rgb(125, 125, 125);
 }
+
+
+@media(max-width:1000px){
+  
+.container .headings .small-heading h3{
+     font-size: 1.2em;
+    color: white;
+    border: 1px solid black;
+    border-radius: 1em;
+    background-color: rgb(7, 27, 27);
+    display: inline;
+    padding: 0.4em;
+}
+
+.container .headings .heading h1{
+color: white;
+font-size: 2em;
+margin-top: 0.4em;
+}
+
+.container .services{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.container .services .card{
+    display: flex;
+    flex-direction: column;
+    margin: 1em;
+    padding: 1em;
+   
+}
+.container .services .card h3{
+    font-size: 1.2em;
+    color:white;
+}
+
+.container .services .card p{
+     max-width: 25em;
+     font-size: 1em;
+     color: rgb(125, 125, 125);
+}
+}
