--- a/DevelopIt/src/components/bookACall/BookACall.css
+++ b/DevelopIt/src/components/bookACall/BookACall.css
@@ -32,3 +32,27 @@
     transition: ease-out 0.1s;
     border: 6px solid rgb(0, 45, 82);
 }
+
+@media(max-width:1000px){
+    
+    .container h1{
+    color: white;
+    font-size: 2em;
+}
+
+.container p{
+    color: rgb(150, 150, 150);
+    font-size: 1.2em;
+    max-width: 28em;
+    text-align: center;
+}
+
+.container  .special{
+    background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+    padding: 0.6em;
+    margin: 1em;
+    border-radius: 0.8em;
+    color: white;
+    font-size: 1.1em;
+}
+}
