--- a/DevelopIt/src/components/footer/Footer.css
+++ b/DevelopIt/src/components/footer/Footer.css
@@ -16,15 +16,19 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
-@media(min-width:1400px) {
+
 	.footer {
 	
-	min-width: 110em;
-}
+	min-width: 84em;
+
 }
 .footer {
+	margin: 0 auto;
 	
-	padding: 80px 0;
+	
+}
+.c1{
+	max-width: 26em;
 }
 
 .container {
@@ -109,4 +113,12 @@ footer{
 	.footer-col {
 		width: 100%;
 	}
+
+
+
+}
+
+
+@media(max-width:1000px){
+	
 }
