--- a/DevelopIt/src/components/heading/Heading.css
+++ b/DevelopIt/src/components/heading/Heading.css
@@ -58,3 +58,54 @@ padding: 0.6em;
     color: white;
     font-size: 1.5em;
 }
+
+@media (max-width: 1000px) {
+    .container .mini-heading{
+    border: 1px solid  #111827;
+    padding: 0.2em;
+    border-radius: 1em;
+    background-color: rgb(0, 63, 118);
+    color: white;
+}
+
+
+.container .core-offer h1{
+    
+        color: white;
+        font-size: 2em;
+        font-weight: 600;
+        text-align: center;
+        padding: 0 0.2em;
+        
+}
+
+
+.container .core-offer h4{
+    
+    color: white;
+    font-size: 1em;
+    padding: 0 1em;
+    text-align: center;
+    
+}
+
+.container .buttons .special{
+    background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+    padding: 0.6em;
+    margin: 1em;
+    border-radius: 0.8em;
+    color: white;
+    font-size: 1.2em;
+}
+
+.container .buttons  .normal{
+border: 2px solid rgb(255, 255, 255);
+padding: 0.6em;
+    margin: 1em;
+    border-radius: 0.8em;
+    color: white;
+    font-size: 1.2em;
+}
+
+
+}
