--- a/DevelopIt/src/components/navigation/Navigation.css
+++ b/DevelopIt/src/components/navigation/Navigation.css
@@ -1,10 +1,25 @@
+
 nav{
+    margin: 0 auto;
+   
     border: 1px solid black;
     border-radius: 1.6em;
    padding: 0.5em;
    background-color: #111827;
-   min-width: 110em;
+   max-width: 83.7em;
 }
-nav ul{
-    
+.margin{
+    margin-top: 1.6em;
+    margin-bottom: 1.6em;
+}
+nav div{
+    background-color: #111827;
+}
+
+nav ul li a{
+    color: white
+}
+
+.white-color{
+    color:white;
 }
