--- a/DevelopIt/src/components/whyus/Whyus.css
+++ b/DevelopIt/src/components/whyus/Whyus.css
@@ -57,3 +57,57 @@ margin-top: 0.8em;
 .container .bot i{
     margin-bottom: 1em;
 }
+
+
+@media(max-width:1000px){
+    .container .top{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding-left: 3em;
+    padding-right: 8em;
+    margin-bottom: 8em;
+    margin-top: 0em;
+}
+    .container .top .small-heading h3{
+        font-size: 1.2em;
+    color: white;
+    border: 1px solid black;
+    border-radius: 0.6em;
+    background-color: rgb(7, 27, 27);
+    display: inline;
+    padding: 0.28em;
+}
+
+.container .top .big-heading h1{
+    color:white;
+    font-size: 2em;
+}
+
+.container .top .big-heading h5{
+    color: rgb(125, 125, 125);
+    font-size: 1.2em;
+}
+
+.container .bot{
+    margin-top: 0em;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.container .bot h2{
+color: white;
+font-size: 1.4em;
+}
+
+.container .bot h5{
+    color: rgb(125, 125, 125);
+font-size: 1em;
+margin-top: 0.8em;
+}
+.container .bot i{
+    margin-bottom: 1em;
+}
+
+}
