--- a/DevelopIt/src/index.css
+++ b/DevelopIt/src/index.css
@@ -30,3 +30,8 @@ h3{font-size: 2.2em;}
 h4{font-size: 2.0em;}
 h5{font-size: 1.8em;}
 h6{font-size: 1.4em;}
+
+.container{
+   margin-top: 1.6em;
+    margin-bottom: 1.6em;
+}
